--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ node_js:
   - v4
 script: npm run test
 after_success: cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+env:
+- CXX=g++-4.8
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
