--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - v6
   - v5
   - v4
+before_script: chmod 0777 ./node_modules/coveralls/bin/coveralls.js
 script: npm run test
 after_success: cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 env:
