--- a/package.json
+++ b/package.json
@@ -29,17 +29,23 @@
   },
   "homepage": "https://github.com/paolo-chiabrera/pmp-manager#readme",
   "dependencies": {
+    "blipp": "^2.3.0",
     "convict": "^1.4.0",
     "good": "^7.0.2",
     "good-console": "^6.1.2",
-    "good-loggly": "^3.1.0",
     "good-squeeze": "^5.0.0",
+    "good-winston-object": "0.0.1",
     "hapi": "^15.0.3",
-    "pmp-scheduler": ">=0.0.3"
+    "hapi-swagger": "^7.4.0",
+    "inert": "^4.0.2",
+    "pmp-scraper": "^1.0.2",
+    "vision": "^4.1.0",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "code": "^4.0.0",
     "coveralls": "^2.11.14",
+    "eslint-config-airbnb": "^13.0.0",
     "lab": "^11.0.1"
   }
 }
