--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "inert": "^4.0.2",
     "pmp-scraper": "^1.0.2",
     "vision": "^4.1.0",
-    "winston": "^2.3.0"
+    "winston": "^2.3.0",
+    "wreck": "^10.0.0"
   },
   "devDependencies": {
     "code": "^4.0.0",
