--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "manager"
   ],
   "engines": {
-    "node": ">=4.5.0"
+    "node": ">=6"
   },
   "author": {
     "name": "Paolo Chiabrera",
@@ -31,23 +31,23 @@
   "dependencies": {
     "@risingstack/trace": "3.x",
     "blipp": "^2.3.0",
-    "convict": "^1.4.0",
-    "good": "^7.0.2",
+    "convict": "^2.0.0",
+    "good": "^7.1.0",
     "good-console": "^6.1.2",
-    "good-squeeze": "^5.0.0",
-    "good-winston-object": "0.0.1",
-    "hapi": "^15.0.3",
-    "hapi-swagger": "^7.4.0",
-    "inert": "^4.0.2",
+    "good-squeeze": "^5.0.1",
+    "good-winston-object": "0.x",
+    "hapi": "^16.1.0",
+    "hapi-swagger": "^7.6.0",
+    "inert": "^4.1.0",
     "pmp-scraper": "1.x",
-    "vision": "^4.1.0",
-    "winston": "^2.3.0",
+    "vision": "^4.1.1",
+    "winston": "^2.3.1",
     "wreck": "^10.0.0"
   },
   "devDependencies": {
     "code": "^4.0.0",
-    "coveralls": "^2.11.14",
-    "eslint-config-airbnb": "^13.0.0",
-    "lab": "^11.0.1"
+    "coveralls": "^2.11.15",
+    "eslint-config-airbnb": "^14.0.0",
+    "lab": "^12.0.0"
   }
 }
